--- a/style.css
+++ b/style.css
@@ -26,41 +26,69 @@ main{
     padding-top: 4px;
     padding-bottom: 4px;
 }
+.fa-star{
+    background-color: unset;
+}
 
 /*links*/
 a{
     text-decoration: none;
-    color: black;
-    
+    color: black;  
 }
-
+a:hover{
+    color: #0065FC;
+}
+a > img{
+    width: 100%;
+    border-radius: 10%;
+}
 /*header*/
 
+/*hebergement*/
+#hebergement{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-content: space-between;
+    flex-wrap: wrap;
+}
 
-/*capsules
-div.capsule{
-    width: 80%;
-    background-color: white;
-    border-radius: 20px;
-
-}
-img{
-    width: 200px;
-}
-div.container{
-    padding: 10px 20px;
-    margin-bottom: 100px;
-}
-*/
-/*hotels
-.hotel{
+/*populaire*/
+#populaire{
     background-color: #DEEBFF;
-    border: 3px solid white;
-    border-radius: 20px;
-    width: 250px;
-    height: 260px;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    justify-content: space-evenly;
 }
-*/
+
+#pop{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 5px;
+}
+
+/*hotel*/
+#hotel{
+    background-color: #DEEBFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+/*capsules*/
+.capsule{
+    padding: 2px;
+    border: 2px solid white;
+    border-radius: 10%;
+    background-color: white;
+    width: 200px;
+    height: 250px;
+}
+
 /*footer*/
 footer > .flex-container{
     display: flex;
