--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*var*/
 :root{
     --blue: #0065FC;
+    --back: #DEEBFF;
 }
 
 /* font 
@@ -11,17 +12,14 @@
 */
 body{
     font-family: 'Raleway', sans-serif;
-    margin: 0;
-}
-main{
-    margin: 50px;
+    margin: 0px 50px;
 }
 /* font awsome */
 .fas{
     color: var(--blue);
     border: 6px solid transparent;
     border-radius: 50%;
-    background-color: #DEEBFF;
+    background-color: var(--back);
 }
 .fa-info{
     border: 2px solid gray;
@@ -46,6 +44,7 @@ a:hover{
 }
 a > img{
     width: 200px;
+    height: 180px;
     border-radius: 15%;
 }
 /*header*/
@@ -61,7 +60,7 @@ a > img{
 
 /*populaire*/
 #populaire{
-    background-color: #DEEBFF;
+    background-color: var(--back);
     display: flex;
     flex-direction: column;
     align-content: space-around;
@@ -77,12 +76,16 @@ a > img{
 
 /*hotel*/
 #hotel{
-    background-color: #DEEBFF;
+    background-color: var(--back);
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    align-content: center;
+    justify-content: space-around;
+    justify-items: center;
     flex-wrap: wrap;
     border-radius: 8%;
+    width: 900px;
+    height: 700px;
 
 }
 
@@ -103,7 +106,7 @@ footer > .flex-container{
     align-content: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #DEEBFF;
+    background-color: var(--back);
     padding: 20px;
 }
 
