--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'Raleway', sans-serif;
-    margin: 0px 50px;
+    margin: 0;
 }
 /* font awsome */
 .fas{
@@ -38,7 +38,6 @@ a:hover{
     color: var(--blue);
 }
 #hotel a > img{
-    width: 200px;
     height: 150px;
     border-radius: 12px;
     border-bottom-left-radius: 0;
@@ -46,7 +45,6 @@ a:hover{
 }
 
 #populaire a > img{
-    width: 200px;
     height: 150px;
     border-radius: 12px;
     border-top-right-radius: 0;
@@ -57,8 +55,8 @@ a:hover{
 button{
     background-color: white;
     border: 1px solid var(--back);
-    border-collapse: collapse;
     border-radius: 12px;
+    padding-left: 0;
 }
 button:hover{
     background-color: var(--back);
@@ -72,12 +70,6 @@ header{
 /*hebergement*/
 #hebergement{
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-content: space-between;
-    flex-wrap: wrap;
-    width: max-content;
-    height: max-content;
 }
 
 /*populaire*/
@@ -89,8 +81,6 @@ header{
     justify-content: space-evenly;
     border-radius: 12px;
     margin: 50px;
-    width: max-content;
-    height: 900px;
 }
 
 #pop{
@@ -111,8 +101,6 @@ header{
     justify-items: center;
     flex-wrap: wrap;
     border-radius: 12px;
-    width: max-content;
-    height: 900px;
 }
 
 /*capsules*/
@@ -121,8 +109,6 @@ header{
     border: 2px solid white;
     border-radius: 12px;
     background-color: white;
-    width: 200px;
-    height: 250px;
     margin: 10px;
     text-align: center;
 }
@@ -132,8 +118,6 @@ header{
     border: 2px solid white;
     border-radius: 12px;
     background-color: white;
-    width: 200px;
-    height: 250px;
     margin: 10px;
     text-align: center;
 }
