--- a/style.css
+++ b/style.css
@@ -42,3 +42,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* variable */
+:root{
+    --blue: #0065FC;
+    --back: #DEEBFF;
+}
