--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ table {
 body{
     min-width: 262px;
     font-family: Raleway, sans-serif;
-    text-align: center;
 }
 /*page*/
 .page{
@@ -62,42 +61,131 @@ body{
 nav{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    text-align: center;
 }
 
 .logo{
     order: 1;
+    flex: 50%;
 }
 .hebergement{
     order: 3;
+    flex: 50%;
+}
+.hebergement :hover, .activite :hover{
+    border-bottom: 2px solid var(--blue);
 }
 .activite{
     order: 4;
+    flex: 50%;
 }
 .inscription{
     order: 2;
+    flex: 50%;
+    text-align: end;
 }
 
 .inscription a{
     text-decoration: none;
     color: var(--blue);
     border: none;
+    margin-right: 10px;
 }
 .hebergement, .activite, nav a{
     text-decoration: none;
     color: black;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 .hebergement, .activite{
     border-bottom: 2px solid var(--back);
-    border-bottom-width: initial;
+    text-align: center;
 }
 
-
+/*section*/
+section{
+    margin-bottom: 10px;
+}
 h1{
     font-size: 1.2em;
     font-weight: bold;
+    margin-bottom: 10px;
+}
+h2{
+    font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+span{
+    font-size: 0.8em;
+}
+/*barre de recherche*/
+.recherche{
+    display: flex;
+    border: 2px solid gray;
+    border-right-color: var(--blue);
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+.fa-search{
+    color: white;
+    background-color: var(--blue);
+    padding: 0;
+    margin: 0;
+}
+.map{
+    display: flex;
+    border: 2px solid transparent;
+    background-color: rgba(211, 211, 211, 0.801);
+    padding: 0;
+    margin: 0;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    flex: 10%;
+    justify-content: center;
+    align-items: center;
+}
+.barreDeRecherche{
+    height:30px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid transparent;
+    border-left: none;
+    border-right: none;
+}
+.searchBar{
+    flex: 80%;
+}
+.search{
+    background-color: var(--blue);
+    border: 2px solid transparent;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    flex: 10%;
+}
+/*footer*/
+.footer{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: var(--back);
+    padding: 20px;
+}
+.aPropos a, .nosHebergements a, .assistance a{
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
+}
+h4{
+    font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+.aPropos a:hover, .nosHebergements a:hover, .assistance a:hover{
+    color: var(--blue);
 }
