--- a/style.css
+++ b/style.css
@@ -157,12 +157,26 @@ span{
 .searchBar{
     flex: 80%;
 }
+.searchButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .search{
+    flex: 10%;
     background-color: var(--blue);
     border: 2px solid transparent;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    flex: 10%;
+}
+.search :hover{
+    cursor: pointer;
+}
+
+/*filtres*/
+.filtre{
+    display: flex;
+    flex-wrap: wrap;
 }
 /*footer*/
 .footer{
