--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ nav{
 
 /*section*/
 section{
-    margin-bottom: 10px;
+    margin: var(--margin);
 }
 h1{
     font-size: 1.2em;
@@ -227,6 +227,17 @@ span{
 }
 
 /*hébergement*/
+.hotel{
+    display: flex;
+    margin: var(--margin);
+}
+.populaires{
+    background-color: var(--back);
+    order: 1;
+}
+.hotelPopulaires{
+}
+
 
 /*footer*/
 .footer{
