--- a/style.css
+++ b/style.css
@@ -109,14 +109,18 @@ section{
     margin: var(--margin);
 }
 h1{
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: bold;
     margin-bottom: 10px;
 }
 h2{
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 10px;
+}
+h3{
+    font-size: 1em;
+    font-weight: bold;
 }
 span{
     font-size: 0.8em;
@@ -228,7 +232,6 @@ span{
 
 /*hébergement*/
 .hotel{
-    display: flex;
     margin: var(--margin);
 }
 .populaires{
@@ -236,6 +239,18 @@ span{
     order: 1;
 }
 .hotelPopulaires{
+    display: flex;
+    justify-content: space-between;
+}
+.cards{
+    display: flex;
+    flex-grow: row nowrap;
+}
+.photo{
+    flex: 50%;
+}
+.desc{
+    flex: 50%;
 }
 
 
