--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ nav{
     order: 2;
     flex: 50%;
     text-align: end;
+    font-weight: bold;
 }
 
 .inscription a{
@@ -166,6 +167,9 @@ span{
     border-radius: 8px;
     justify-content: center;
     align-items: center;
+}
+.search span{
+    display: none;
 }
 .fa-search{
     color: white;
@@ -279,6 +283,9 @@ span{
 }
 .desc span .far{
     color: var(--back);
+}
+.note{
+    margin-top: 90px;
 }
 .prix{
     display: block;
@@ -395,4 +402,52 @@ h4{
 }
 .aPropos a:hover, .nosHebergements a:hover, .assistance a:hover{
     color: var(--blue);
+}
+
+/*media query*/
+  /*tablette*/
+@media screen and (min-width: 680px){
+    /*nav*/
+    nav{
+        flex-flow: row nowrap;
+    }
+    .logo{
+        flex: 70%;
+    }
+    .hebergement{
+        order: 2;
+        flex: 10%;
+        border: none;
+    }
+    .activite{
+        order: 3;
+        flex: 10%;
+        border: none;
+    }
+    .hebergement a, .activite a{
+        text-decoration: none;
+    }
+    .inscription{
+        order: 4;
+        flex: 10%;
+    }
+    .hebergement :hover, .activite :hover{
+        border-top: 2px solid var(--blue);
+        border-bottom: none;
+        padding-top: 32px;
+        color: var(--blue);
+    }
+    /*barre de recherche*/
+    .recherche{
+        width: 40%;
+    }
+    .search i{
+        display: none;
+    }
+    .search span{
+        display: initial;
+        font-size: 1em;
+        font-weight: bold;
+        color: white;
+    }
 }
