--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body{
 /*page*/
 .page{
     margin: var(--margin);
+    overflow: hidden;
 }
 /*header*/
 nav{
@@ -131,7 +132,6 @@ span{
     display: flex;
     border: 1px solid transparent;
     border-right: none;
-    border-right-color: var(--blue);
     border-radius: 8px;
     margin-bottom: 10px;
 }
@@ -261,9 +261,9 @@ span{
 }
 .cards:hover{
     cursor: pointer;
-    background-color:rgb(2, 46, 2);
-    border-color: rgb(2, 46, 2);
-    color: white;
+    background-color:var(--back);
+    border-color: var(--back);
+
 }
 .cards a img{
     border-top-left-radius: 30px;
@@ -312,14 +312,14 @@ span{
 
 }
 .marseilleCards:hover{
-    background-color: rgb(2, 46, 2);
+    background-color: var(--back);
     cursor: pointer;
-    color: white;
+    border-color: var(--back);
 }
 .marseillePhoto a img{
     border: 0px solid transparent;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
     width: 100%;
     height: 150px;
     object-fit: cover;
@@ -345,7 +345,7 @@ span{
     font-weight: bold;
     font-size: 0.8em;
 }
-.afficher button :hover{
+.afficher button:hover{
     cursor: pointer;
     color: var(--blue);
 }
@@ -361,22 +361,19 @@ span{
     padding: 0;
 }
 .activiteCards:hover{
-    background-color: rgb(2, 46, 2);
+    background-color: var(--back);
     cursor: pointer;
-    color: white;
 }
 .activitePhoto a img{
     border: 0px solid transparent;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
     width: 100%;
     height: 150px;
     object-fit: cover;
 
 }
 .activiteDesc{
-    display: flex;
-    flex-direction: column ;
     margin: 5px 10px;
 }
 /*footer*/
@@ -534,5 +531,30 @@ h4{
     }
     .marseilleCards{
         margin-right: 50px;
+    }
+    .hebergements{
+        display: flex;
+        justify-content: space-between;
+    }
+    .cardsActivite{
+        width: auto;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+    }
+    .activiteCards{
+        width: 72%;
+    }
+    .colonne1 .activiteCards .activitePhoto{
+        padding-bottom: 80%;
+    }
+    .colonne1 .activiteCards .activitePhoto img{
+        height: 210%;
+    }
+    .colonne1{
+        flex: 25%;
+    }
+    .colonne2{
+        flex: 25%;
     }
 }
