--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ table {
     --blue: #0065FC;
     --back: #DEEBFF;
     --margin: 20px 8px;
+    --gris: rgba(242,242,242,255);
 }
 /*body*/
 body{
@@ -138,7 +139,7 @@ span{
 .map{
     display: flex;
     border: 2px solid transparent;
-    background-color: rgba(211, 211, 211, 0.801);
+    background-color: var(--gris);
     padding: 0;
     margin: 0;
     border-top-left-radius: 8px;
@@ -239,7 +240,7 @@ span{
 
 /*hébergement*/
 .hotel{
-    background-color: var(--back);
+    background-color: var(--gris);
     padding: 20px;
     margin: 0 !important;
 }
@@ -254,10 +255,10 @@ span{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    border: 10px solid white;
+    border: 4px solid white;
     border-radius: 30px;
     background-color: white;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 .cards:hover{
     cursor: pointer;
@@ -385,7 +386,7 @@ span{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    background-color: var(--back);
+    background-color: var(--gris);
     padding: 20px;
 }
 .aPropos, .nosHebergements, .assistance{
@@ -474,7 +475,7 @@ h4{
         order: 1;
         flex: 70%;
         flex-flow: row wrap;
-        background-color: var(--back);
+        background-color: var(--gris);
         border-radius: 12px;
         padding: 5px;
         margin: 0 5px;
