--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ body{
 }
 /*page*/
 .page{
-    margin: var(--margin);
     overflow: hidden;
 }
 /*header*/
@@ -66,6 +65,7 @@ nav{
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
+    margin: var(--margin)
 }
 
 .logo{
@@ -75,14 +75,18 @@ nav{
 .hebergement{
     order: 3;
     flex: 50%;
+    padding-bottom: 20px;
 }
 .hebergement:hover, .activite:hover{
     border-bottom: 2px solid var(--blue);
+}
+.hebergement :hover, .activite :hover{
     color: var(--blue);
 }
 .activite{
     order: 4;
     flex: 50%;
+    padding-bottom: 20px;
 }
 .inscription{
     order: 2;
@@ -113,11 +117,11 @@ section{
 }
 h1{
     font-size: 1.4em;
-    font-weight: bold;
+    font-weight: 900;
     margin-bottom: 10px;
 }
 h2{
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -134,7 +138,8 @@ span{
     border: 1px solid transparent;
     border-right: none;
     border-radius: 8px;
-    margin-bottom: 10px;
+    margin: auto 10px;
+    width: 330px;
 }
 .map{
     display: flex;
@@ -142,9 +147,9 @@ span{
     background-color: var(--gris);
     padding: 0;
     margin: 0;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    flex: 20%;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    flex: 15%;
     justify-content: center;
     align-items: center;
 }
@@ -153,7 +158,7 @@ span{
     background-color: var(--blue);
 }
 .barreDeRecherche{
-    height:30px;
+    height:40px;
     width: 100%;
     padding: 0 5px;
     margin: 0;
@@ -162,14 +167,15 @@ span{
     border-right: none;
     font-weight: bold;
 }
+
 .searchBar{
-    flex: 60%;
+    flex: 70%;
 }
 .search{
-    flex: 20%;
+    flex: 15%;
     background-color: var(--blue);
     border: 2px solid transparent;
-    border-radius: 8px;
+    border-radius: 15px;
     justify-content: center;
     align-items: center;
 }
@@ -242,7 +248,6 @@ span{
 .hotel{
     background-color: var(--gris);
     padding: 20px;
-    margin: 0 !important;
 }
 .populaires{
     order: 1;
@@ -250,6 +255,7 @@ span{
 .hotelPopulaires{
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
 }
 .cards{
     display: flex;
@@ -282,6 +288,7 @@ span{
     flex-direction: column;
     margin-left: 5px;
     flex: 50%;
+    margin-top: 10px;
 }
 .desc span .fas{
     color: var(--blue);
