--- a/style.css
+++ b/style.css
@@ -61,17 +61,18 @@ body{
 }
 
 /*header*/
-nav{
+header{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    margin: var(--margin)
 }
 
 .logo{
     order: 1;
-    flex: 50%;
+    flex: 30%;
+    margin-top:20px;
+    margin-left: 20px;
 }
 .hebergement{
     order: 3;
@@ -94,6 +95,10 @@ nav{
     flex: 50%;
     text-align: end;
     font-weight: bold;
+    font-size: 0.8em;
+    padding-bottom: 20px;
+    margin-top: 40px;
+    margin-right: 20px;
 }
 
 .inscription a{
@@ -102,14 +107,16 @@ nav{
     border: none;
     margin-right: 10px;
 }
-.hebergement, .activite, nav a{
+.hebergement, .activite, header a{
     text-decoration: none;
     color: black;
     margin: 10px 0;
 }
 .hebergement, .activite{
-    border-bottom: 2px solid var(--back);
+    border-bottom: 2px solid var(--gris);
     text-align: center;
+    font-size: .8em;
+    
 }
 
 /*section*/
@@ -138,8 +145,7 @@ span{
     display: flex;
     height: 40px;
     border: 1px solid var(--gris);
-    border-right: none;
-    border-radius: 8px;
+    border-radius: 20px;
     margin: auto 10px;
     width: 330px;
 }
@@ -211,7 +217,7 @@ span{
 }
 .filtres button{
     background-color: white;
-    border: 1px solid var(--back);
+    border: 1px solid var(--gris);
     border-radius: 30px;
     padding-right: 5px;
     font-size: 1em;
@@ -220,7 +226,7 @@ span{
 }
 .filtres button .fas{
     color: var(--blue);
-    border: 18px solid transparent;
+    border: 10px solid transparent;
     background-color: var(--back);
     border-radius: 30px;
     font-size: 0.8em;
@@ -229,6 +235,15 @@ button span{
     font-weight: bold;
     padding-right: 10px;
     font-family: "Raleway", sans-serif;
+}
+.famille{
+    margin-right: 20%;
+}
+.famille .fas{
+    padding: 0 3px;
+}
+.romantique{
+    margin-right: 50px;
 }
 
 /*info*/
@@ -239,7 +254,7 @@ button span{
 }
 .fa-info{
     color: var(--blue);
-    border: 2px solid var(--back);
+    border: 2px solid var(--gris);
     border-radius: 50%;
     background-color: white;
     padding:  5px 10px;
@@ -531,10 +546,15 @@ h4{
     }
 
     /*footer*/
+    footer{
+        background-color: var(--gris);
+    }
     .footer{
         display: flex;
         flex-flow: row nowrap;
-    }
+        max-width: 1330px;
+        margin: 0 auto;
+}
 
     .cardsActivite{
         display: grid;
@@ -577,8 +597,7 @@ h4{
     }
 }
 @media (min-width: 1330px){
-    body{
-        max-width: 1330px;
+    .page{
         margin: auto;
     }
     .marseilleCards{
@@ -588,4 +607,5 @@ h4{
         display: flex;
         justify-content: space-between;
     }
+
 }
