--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ header{
 .hebergement:hover, .activite:hover{
     border-bottom: 2px solid var(--blue);
 }
+.hebergement :hover, .activite :hover{
+    color: var(--blue);
+}
 
 .activite{
     order: 4;
@@ -114,7 +117,6 @@ header{
     border-bottom: 2px solid var(--gris);
     text-align: center;
     font-size: .8em;
-    
 }
 
 /*section*/
@@ -142,6 +144,12 @@ h3{
 }
 span{
     font-size: 0.6em;
+}
+span .fas{
+    color: var(--blue);
+}
+span .black{
+    color: rgba(128, 128, 128, 0.377);
 }
 /*barre de recherche*/
 .recherche{
@@ -286,10 +294,10 @@ button span{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    border: 4px solid white;
+    border: 7px solid white;
     border-radius: 30px;
     background-color: white;
-    margin: 10px 0;
+    margin: 10px 8px;
 }
 .cards:hover{
     cursor: pointer;
@@ -298,8 +306,8 @@ button span{
 
 }
 .cards a img{
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     width: 150px;
     height: 150px;
     object-fit: cover;
@@ -315,12 +323,6 @@ button span{
     flex: 50%;
     margin-top: 10px;
 }
-.desc span .fas{
-    color: var(--blue);
-}
-.desc span .far{
-    color: var(--back);
-}
 .note{
     margin-top: auto;
     margin-bottom: 15px;
@@ -328,9 +330,11 @@ button span{
 .prix{
     display: block;
     margin-top: 10px;
+    font-size: 0.6em;
 }
 .euro{
     font-weight: bold;
+    font-size: 1em;
 }
 /*card marseille*/
 .titreHebergementMarseille{
@@ -339,11 +343,11 @@ button span{
 .marseilleCards{
     display: flex;
     flex-flow: column wrap;
-    margin: var(--margin);
     border: 5px solid white;
     border-radius: 30px;
     padding: 0;
     box-shadow: 0 0 10px 8px var(--gris);
+    margin: 15px 20px;
 
 }
 .marseilleCards:hover{
@@ -368,12 +372,6 @@ button span{
 .marseilleDesc span{
     margin-top: 10px;
 }
-.marseilleDesc span .fas{
-    color: var(--blue);
-}
-.marseilleDesc span .far{
-    color: var(--back);
-}
 .afficher button{
     background-color: unset;
     border: none;
@@ -381,7 +379,7 @@ button span{
     font-size: 0.8em;
     margin-left: 15px;
     font-family: "Raleway";
-    margin-bottom: 50px;
+    margin: 30px 0 50px 15px;
 }
 .afficher button:hover{
     cursor: pointer;
@@ -392,15 +390,13 @@ button span{
 .titreActivite{
     margin-left: 3px;
 }
-
 .activiteCards{
     display: flex;
     flex-flow: column wrap;
-    margin: var(--margin);
-    border: 2px solid transparent;
     border-radius: 30px;
     padding: 0;
-    box-shadow: 0 0 10px 8px var(--gris);
+    box-shadow: 0 0 8px 5px var(--gris);
+    margin: 20px 20px;
 }
 .cardsActivite a{
     text-decoration: none;
